[ENG-1707] Fix sign-in page layout on mobile view (#103)
* [ENG-1707] Fix sign-in page layout on mobile view

* Fix "Sign In" layout for mobile view

--- a/src/components/AuthSignInPage/index.scss
+++ b/src/components/AuthSignInPage/index.scss
@@ -12,6 +12,10 @@
 
   .single-card-page__content {
     padding: 50px 100px;
+
+    @include phone() {
+      padding: 25px;
+    }
   }
 }
 
